# cmake_learn

./: .gitignore  Build-Project.ps1  CMakeLists.txt  CTestConfig.cmake  Config.cmake.in  README.md  TutorialConfig.h.in  pruebas.cxx  tutorial.cxx
MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
Testing/: TAG
Testing/20200728-1532/: Test.xml
Testing/Temporary/: LastCoverage_20200728-1532.log.tmp
